# SerialMessage

./: BluetoothSerialMessage.h  CMakeLists.txt  MESSAGE-INTF.h  Message.h  Messageable.h  README.md  SerialMessage.h  TelnetMessage.h  USBMessage.h  library.json
.cache/clangd/index/: MESSAGE-INTF.h.61E44BC10482B874.idx  Message.h.D8293BF91344DAC1.idx  message.cpp.60E0EAFD695804EC.idx  message.h.BD9C7268226D7FA0.idx  serial-message.cpp.595943CD7464CE48.idx  serial-message.h.A00FCF3C800CD1F6.idx
src/: CMakeLists.txt  MESSAGE-INTF.h  message-callback.h  message.cpp  message.h
src/bluetooth/: BluetoothSerialMessage.h
src/hardware-drivers/: CMakeLists.txt
src/hardware-drivers/arduino-fake/: Arduino.h  BluetoothSerial.h  CMakeLists.txt  HardwareSerial.h  WiFi.h
src/hardware-drivers/bluetooth/: BluetoothSerialMessage.h  CMakeLists.txt  bluetooth-message.cpp  bluetooth-message.h
src/hardware-drivers/serial/: CMakeLists.txt  serial-message.cpp  serial-message.h
src/hardware-drivers/telnet/: CMakeLists.txt  TelnetMessage.h  telnet-message.cpp  telnet-message.h
src/hardware-drivers/usb/: CMakeLists.txt  USBMessage.h  usb-message.cpp  usb-message.h
src/serial/: serial-message.cpp  serial-message.h
src/telnet/: TelnetMessage.h
unit-test/: CMakeLists.txt
unit-test/arduino-fake/: Arduino.h  BluetoothSerial.h  ESPTelnet.h  USBCDC.h
